--- a/src/index.html
+++ b/src/index.html
@@ -41,15 +41,15 @@
                         <span class="material-symbols-outlined">
                             chevron_right
                             </span>
-                        <label>Farm details</label>
-                    <div class="farm-details"><h2>Farm details</h2>
+                        <label> Farm details </label>
+                    <div class="farm-details-sign"><h2>Farm details</h2>
                     </div>
                     <label>
                         Farm name
-                    <input type="text">
+                    <input class = "text-input" type="text">
                     </label>
                     <label>Farm notes (optional)
-                    <input type="text">
+                    <input class = "text-input" type="text">
                     </label>
                     <input type="submit" value="Save farm details" id="save-button">
                     <a href="#">Unassign farm</a>
