--- a/src/index.html
+++ b/src/index.html
@@ -31,8 +31,8 @@
                     settings</span>Farm Settings
             </a>
         </div> 
-            <div class="flex-container">
-                <form>
+           <div class="flex-container">
+                <div class="page-path">
                     <a href="#">Farm 01</a>
                     <span class="material-symbols-outlined">
                         chevron_right
@@ -42,17 +42,19 @@
                             chevron_right
                             </span>
                         <label> Farm details </label>
+                </div>
+                <form>
                     <div class="farm-details-sign"><h2>Farm details</h2>
                     </div>
                     <label>
                         Farm name
-                    <input class = "text-input" type="text">
+                    <input class = "text-input" type="text" placeholder="Farm 01">
                     </label>
                     <label>Farm notes (optional)
                     <input class = "text-input" type="text">
                     </label>
                     <input type="submit" value="Save farm details" id="save-button">
-                    <a href="#">Unassign farm</a>
+                    <a href="#" id="unnasign-link">Unassign farm</a>
                 </form>
             </div>
     </div>
