button wisth changed

--- a/src/index.html
+++ b/src/index.html
@@ -11,12 +11,14 @@
     <div class="container">
        <div class="navbar">
             <a href="#" class="navbar__link">
-                <span class="material-symbols-outlined">
-                    home</span>AtFarm
+                <span class="atfarm-logo-image-icon">
+                    <img src="/src/images/at_farm_logo.png" alt="atFarmLogo"/>
+                    </span>AtFarm
             </a>  
             <a href="#" class="navbar__link">
-                <span class="material-symbols-outlined">
-                    yard</span>Current farm
+                <span class="current-farm-logo-image-icon">
+                    <img src="/src/images/farm0_logo.png" alt="currentFarmLogo"/>
+                    </span>Current farm
             </a>  
             <a href="#" class="navbar__link">
                 <span class="material-symbols-outlined">
@@ -54,7 +56,7 @@
                     <input class = "text-input" type="text">
                     </label>
                     <input type="submit" value="Save farm details" id="save-button">
-                    <a href="#" id="unnasign-link">Unassign farm</a>
+                    <a href="#" id="unassign-link">Unassign farm</a>
                 </form>
             </div>
     </div>
