container background changed, page path text formatted

--- a/src/index.html
+++ b/src/index.html
@@ -10,40 +10,44 @@
 <body>
     <div class="container">
        <div class="navbar">
-            <a href="#" class="navbar__link">
-                <span class="atfarm-logo-image-icon">
-                    <img src="/src/images/at_farm_logo.png" alt="atFarmLogo"/>
-                    </span>AtFarm
-            </a>  
-            <a href="#" class="navbar__link">
-                <span class="current-farm-logo-image-icon">
-                    <img src="/src/images/farm0_logo.png" alt="currentFarmLogo"/>
-                    </span>Current farm
-            </a>  
-            <a href="#" class="navbar__link">
-                <span class="material-symbols-outlined">
-                    wb_twilight</span>Fields
-            </a>  
-            <a href="#" class="navbar__link">
-                <span class="material-symbols-outlined">
-                    bar_chart</span>Nutrition Plan
-            </a>  
-            <a href="#" class="navbar__link">
-                <span class="material-symbols-outlined">
-                    settings</span>Farm Settings
-            </a>
+            <div class="home">
+                <a href="#" class="navbar__link_home">
+                    <span class="atfarm-logo-image-icon">
+                        <img src="/src/images/at_farm_logo.png" alt="atFarmLogo"/>
+                        </span>AtFarm
+                </a>
+            </div>
+            <div class="navbar-items">
+                <a href="#" class="navbar__link">
+                    <span class="current-farm-logo-image-icon">
+                        <img src="/src/images/farm0_logo.png" alt="currentFarmLogo"/>
+                        </span>Current farm
+                </a>  
+                <a href="#" class="navbar__link">
+                    <span class="material-symbols-outlined">
+                        wb_twilight</span>Fields
+                </a>  
+                <a href="#" class="navbar__link">
+                    <span class="material-symbols-outlined">
+                        bar_chart</span>Nutrition Plan
+                </a>  
+                <a href="#" class="navbar__link">
+                    <span class="material-symbols-outlined">
+                        settings</span>Farm Settings
+                </a>
+            </div>
         </div> 
            <div class="flex-container">
                 <div class="page-path">
-                    <a href="#">Farm 01</a>
+                    <a class = "path" href="#">Farm 01</a>
                     <span class="material-symbols-outlined">
                         chevron_right
                         </span>
-                        <a href="#">Farm settings</a>
+                        <a class = "path" href="#">Farm settings</a>
                         <span class="material-symbols-outlined">
                             chevron_right
                             </span>
-                        <label> Farm details </label>
+                        <label class = "path"> Farm details </label>
                 </div>
                 <form>
                     <div class="farm-details-sign"><h2>Farm details</h2>
