--- a/src/index.html
+++ b/src/index.html
@@ -10,30 +10,30 @@
 <body>
     <div class="container">
        <div class="navbar">
-            <div class="home">
-                <a href="#" class="navbar__link_home">
+            <div class="home-icon">
+                <a href="#" class="navbar-link-home">
                     <span class="atfarm-logo-image-icon">
                         <img src="/src/images/at_farm_logo.png" alt="atFarmLogo"/>
-                        </span>AtFarm
+                    </span>AtFarm
                 </a>
             </div>
             <div class="navbar-items">
-                <a href="#" class="navbar__link">
+                <a href="#" class="navbar-link">
                     <span class="current-farm-logo-image-icon">
                         <img src="/src/images/farm0_logo.png" alt="currentFarmLogo"/>
-                        </span>Current farm
+                    </span>Current farm
                 </a>  
-                <a href="#" class="navbar__link">
+                <a href="#" class="navbar-link">
                     <span class="material-symbols-outlined">
-                        wb_twilight</span>Fields
+                    wb_twilight</span>Fields
                 </a>  
-                <a href="#" class="navbar__link">
+                <a href="#" class="navbar-link">
                     <span class="material-symbols-outlined">
-                        bar_chart</span>Nutrition Plan
+                    bar_chart</span>Nutrition Plan
                 </a>  
-                <a href="#" class="navbar__link">
+                <a href="#" class="navbar-link">
                     <span class="material-symbols-outlined">
-                        settings</span>Farm Settings
+                    settings</span>Farm Settings
                 </a>
             </div>
         </div> 
@@ -42,18 +42,17 @@
                     <a class = "path" href="#">Farm 01</a>
                     <span class="material-symbols-outlined">
                         chevron_right
-                        </span>
-                        <a class = "path" href="#">Farm settings</a>
-                        <span class="material-symbols-outlined">
-                            chevron_right
-                            </span>
-                        <label class = "path"> Farm details </label>
+                    </span>
+                    <a class = "path" href="#">Farm settings</a>
+                    <span class="material-symbols-outlined">
+                        chevron_right
+                    </span>
+                    <label class = "path"> Farm details </label>
                 </div>
-                <form>
-                    <div class="farm-details-sign"><h2>Farm details</h2>
+                <form class="farm-details-form">
+                    <div class="farm-details-sign"><h2 class="farm-details-headline">Farm details</h2>
                     </div>
-                    <label>
-                        Farm name
+                    <label>Farm name
                     <input class = "text-input" type="text" placeholder="Farm 01">
                     </label>
                     <label>Farm notes (optional)
