--- a/src/index.html
+++ b/src/index.html
@@ -50,16 +50,9 @@
                     <label class = "path"> Farm details </label>
                 </div>
                 <form class="farm-details-form">
-                    <div class="farm-details-sign"><h2 class="farm-details-headline">Farm details</h2>
+                    <div class="nutrition-plan-overview-headline">
+                        <h2 class="nutrition-plan-overview-base-tag">Nutrition Plan overview</h2>
                     </div>
-                    <label>Farm name
-                    <input class = "text-input" type="text" placeholder="Farm 01">
-                    </label>
-                    <label>Farm notes (optional)
-                    <input class = "text-input" type="text">
-                    </label>
-                    <input type="submit" value="Save farm details" id="save-button">
-                    <a href="#" id="unassign-link">Unassign farm</a>
                 </form>
             </div>
     </div>
