base divs created

--- a/src/index.html
+++ b/src/index.html
@@ -43,17 +43,23 @@
                     <span class="material-symbols-outlined">
                         chevron_right
                     </span>
-                    <a class = "path" href="#">Farm settings</a>
-                    <span class="material-symbols-outlined">
-                        chevron_right
-                    </span>
-                    <label class = "path"> Farm details </label>
+                    <label class = "path"> Nutrition Plan Overview </label>
                 </div>
-                <form class="farm-details-form">
+                <div class="headlines">
                     <div class="nutrition-plan-overview-headline">
                         <h2 class="nutrition-plan-overview-base-tag">Nutrition Plan overview</h2>
+                        <h3 class="overview-of-crop-sub-headline">An overview of crop nutrition plans and recommended products across your farm</h3>
                     </div>
-                </form>
+                </div>
+                <div class="tabs">
+
+                </div>
+                <div class="search-area">
+
+                </div>
+                <div maize-drop-down>
+
+                </div>
             </div>
     </div>
 </body>
