tab labels + structure

--- a/src/index.html
+++ b/src/index.html
@@ -52,13 +52,28 @@
                     </div>
                 </div>
                 <div class="tabs">
+                    <input type="radio" id="plans" name="tabs" checked="checked">
+                    <label for="plans">Plans</label>
+                    <div class="tab">
+                        <!--plans tab base content-->
+                        <div class="search-area">
+                            <h3>Search</h3>
+                            <input type="text" class="search-box">
+                        </div>
+                        <div maize-drop-down>
+                            <section>
+                                <details>
+                                    
+                                </details>
+                            </section>
+                        </div>
+                    </div>
 
-                </div>
-                <div class="search-area">
-
-                </div>
-                <div maize-drop-down>
-
+                    <input type="radio" id="products" name="tabs">
+                    <label for="products">Products</label>
+                    <div class="tab">
+                    </div>
+                    
                 </div>
             </div>
     </div>
